Change for create group chat

--- a/app/src/main/res/layout/group_chat_fragment.xml
+++ b/app/src/main/res/layout/group_chat_fragment.xml
@@ -76,6 +76,7 @@
                     android:layout_marginBottom="@dimen/_10sdp" />
 
                 <ImageButton
+                    android:id="@+id/imgCreateGroup"
                     android:layout_width="@dimen/_40sdp"
                     android:layout_height="@dimen/_40sdp"
                     android:background="@drawable/baseline_add_circle_24"
