--- a/app/src/main/res/layout/layout_create_group_chat.xml
+++ b/app/src/main/res/layout/layout_create_group_chat.xml
@@ -77,6 +77,7 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@id/nameGroup"
         tools:ignore="RtlSymmetry" />
+
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -88,6 +89,16 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             >
+
+            <ProgressBar
+                android:id="@+id/progressBarShare"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/_40sdp"
+                android:layout_centerHorizontal="true"
+                android:indeterminate="true"
+                android:indeterminateDrawable="@drawable/custom_progressbar"
+                />
 
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/recyclerviewRecent"
@@ -109,5 +120,4 @@
         </RelativeLayout>
 
     </androidx.cardview.widget.CardView>
-
 </androidx.constraintlayout.widget.ConstraintLayout>
